hphp/hack/test/full_fidelity/cases/module_newtype_bad3.php
<?hh

module foo;
async newtype Foo = int; // error
